test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-nil.chpl
//  lhs: shared!  rhs: nil?  error: nlb

class MyClass {
  var x: int;
}



var lhs: shared MyClass = nil;
