test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-nil.good
init-var-nonnil-shared-from-oknil-nil.chpl:9: error: invalid copy-initialization
init-var-nonnil-shared-from-oknil-nil.chpl:9: error: Assigning non-nilable shared to nil
